--- a/TrafficLight_march24_2021/Base.lproj/Main.storyboard
+++ b/TrafficLight_march24_2021/Base.lproj/Main.storyboard
@@ -1,24 +1,97 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TrafficLight_march24_2021" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c0N-fw-3pY">
+                                <rect key="frame" x="123.5" y="20" width="128" height="128"/>
+                                <color key="backgroundColor" systemColor="systemRedColor"/>
+                                <accessibility key="accessibilityConfiguration" label="0"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="0zw-Lj-xiJ"/>
+                                    <constraint firstAttribute="width" constant="128" id="gfB-ON-sPy"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p2p-Vd-4WK">
+                                <rect key="frame" x="123.5" y="188" width="128" height="128"/>
+                                <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                <accessibility key="accessibilityConfiguration" label="1"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="128" id="WCl-MN-eKd"/>
+                                    <constraint firstAttribute="height" constant="128" id="tX8-Ci-R0M"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3se-Yn-9HW">
+                                <rect key="frame" x="123.5" y="356" width="128" height="128"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                <accessibility key="accessibilityConfiguration" label="2"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="AC1-Jr-Law"/>
+                                    <constraint firstAttribute="width" constant="128" id="cG7-db-3oA"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="49u-l0-pWF">
+                                <rect key="frame" x="137.5" y="585" width="100" height="30"/>
+                                <color key="backgroundColor" red="1" green="0.04830961332" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Eu8-gx-3WO"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="oSn-Wy-6l2"/>
+                                </constraints>
+                                <state key="normal" title="START">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="startButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="eF2-bb-usq"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="49u-l0-pWF" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="01e-kZ-IJp"/>
+                            <constraint firstItem="c0N-fw-3pY" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="3xM-cT-1AH"/>
+                            <constraint firstItem="p2p-Vd-4WK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Fv4-YK-ndh"/>
+                            <constraint firstItem="c0N-fw-3pY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Pss-lf-McY"/>
+                            <constraint firstItem="p2p-Vd-4WK" firstAttribute="top" secondItem="c0N-fw-3pY" secondAttribute="bottom" constant="40" id="Pz7-C3-D2C"/>
+                            <constraint firstItem="3se-Yn-9HW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="R9U-TN-Pfk"/>
+                            <constraint firstItem="3se-Yn-9HW" firstAttribute="top" secondItem="p2p-Vd-4WK" secondAttribute="bottom" constant="40" id="nK8-e8-JB8"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="49u-l0-pWF" secondAttribute="bottom" constant="52" id="oQe-Eq-Jzs"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="greenLightView" destination="3se-Yn-9HW" id="bAA-6p-QHX"/>
+                        <outlet property="redLightView" destination="c0N-fw-3pY" id="n2g-uc-0PD"/>
+                        <outlet property="startButton" destination="49u-l0-pWF" id="kD4-1D-S3O"/>
+                        <outlet property="yellowLightView" destination="p2p-Vd-4WK" id="QOZ-5y-lDq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="140" y="67.916041979010501"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
